--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "preinstall": "npx npm-force-resolutions",
   "scripts": {
-    "test": "test",
+    "test": "jest",
     "dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "start": "node index.js"
@@ -38,6 +38,7 @@
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^8.0.1",
     "express": "^4.18.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "^2.0.6",
     "jest": "^29.0.1",
