--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "dotenv": "^16.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
